--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,13 +11,14 @@ on:
         default: false
         required: false
         type: boolean
+      tag:
+        description: 'Specify tag (empty builds main)'
+        required: false
+        default: ''
 
 concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
-
-env:
-  BAYBE_DOCS_LINKCHECK_IGNORE: true  # Ignore link checks to github.io (pages might not yet exist)
 
 jobs:
   build:
@@ -28,6 +29,8 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.tag || github.ref }}
       - uses: actions/setup-python@v5
         with: {python-version: "3.9"}
       - name: Install tox
