--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,12 +35,9 @@ jobs:
         with: {python-version: "3.9"}
       - name: Install tox
         run: pip install tox-uv
-      - name: Build Docs
-        if: ${{ inputs.force != true }}
-        run: tox -e docs-py39
-      - name: Build Docs (Force)
+      - name: Build Docs ${{ inputs.force == true && '(Force)' || '' }}
         if: ${{ inputs.force == true }}
-        run: tox -e docs-py39 -- -f
+        run: tox -e docs-py39 ${{ inputs.force == true && '-- -f' || '' }}
       - name: Upload docs artifact
         uses: actions/upload-pages-artifact@v1
         with:
